--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^14.0.0-beta.0",
     "@angular-builders/jest": "^13.0.0",
     "@angular-devkit/build-angular": "~14.0.0",
     "@angular/cli": "~14.0.0",
@@ -48,10 +49,10 @@
     "@storybook/addon-interactions": "^6.5.0",
     "@storybook/addon-links": "^6.5.0",
     "@storybook/angular": "^6.5.0",
-    "@storybook/builder-webpack5": "^6.5.7",
-    "@storybook/manager-webpack5": "^6.5.7",
+    "@storybook/builder-webpack5": "^6.5.0",
+    "@storybook/manager-webpack5": "^6.5.0",
     "@storybook/testing-library": "0.0.11",
-    "@testing-library/angular": "^11.0.0",
+    "@testing-library/angular": "^12.0.0",
     "@types/jest": "^28.0.0",
     "@types/node": "^17.0.0",
     "babel-loader": "^8.2.2",
@@ -62,59 +63,5 @@
     "ts-node": "~10.8.0",
     "tslint": "~6.1.0",
     "typescript": "~4.7.3"
-  },
-  "jest": {
-    "preset": "jest-preset-angular",
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/jest-config/setup.ts"
-    ],
-    "transformIgnorePatterns": [
-      "node_modules/(?!@storybook/*)"
-    ],
-    "testPathIgnorePatterns": [
-      "<rootDir>/node_modules/",
-      "<rootDir>/dist/",
-      "<rootDir>/storybook-static/",
-      "<rootDir>/src/test.ts"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/jest-config/",
-      "/node_modules/"
-    ],
-    "snapshotSerializers": [
-      "jest-preset-angular/build/AngularSnapshotSerializer.js",
-      "jest-preset-angular/build/HTMLCommentSerializer.js"
-    ],
-    "globals": {
-      "ts-jest": {
-        "tsconfig": "<rootDir>/tsconfig.spec.json",
-        "stringifyContentPathRegex": "\\.html$",
-        "diagnostics": false,
-        "isolatedModules": true,
-        "astTransformers": {
-          "before": [
-            "jest-preset-angular/build/InlineFilesTransformer",
-            "jest-preset-angular/build/StripStylesTransformer"
-          ]
-        }
-      }
-    },
-    "moduleNameMapper": {
-      "\\.(css|less)$": "<rootDir>/src/jest-config/__mocks__/styleMock.js",
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/jest-config/__mocks__fileMock.js"
-    },
-    "transform": {
-      "^.+\\.(ts|html)$": "ts-jest",
-      "^.+\\.js$": "babel-jest"
-    },
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node",
-      ".html"
-    ]
   }
 }
